tests/e2e/assignment_expr.error
Error: syntax error in story at line 1, column 5

1|    2+2 = ""
          ^

E0041: `=` is not allowed here
